Final touch